--- a/students/students.css
+++ b/students/students.css
@@ -1,7 +1,13 @@
 .plus-button {
+  position: relative;
   max-width: 50px;
-  background: #2296da !important;
+  background: #d3d3d3 !important; /* unavailable */
+  /* background: #2296da !important; */
   margin-left: 5px;
+}
+
+.plus-button:hover {
+  cursor: help;
 }
 
 .content>.right>.button2 {
@@ -86,14 +92,14 @@
   background-color: white;
 }
 
-.classAvg:hover .stats {
+.classAvg:hover .stats, .plus-button:hover .plus-button-down-note {
   visibility: visible;
   opacity: 1;
   top: 30px;
   transition: opacity 250ms, 250ms top;
 }
 
-.stats {
+.stats, .plus-button-down-note {
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -106,6 +112,19 @@
   min-width: 555px;
   border-radius: 5px;
   transition: opacity 250ms, 250ms top, visibility 1ms 250ms;
+}
+
+.plus-button-down-note {
+  right: 0;
+  top: 25px;
+  transform: none;
+  left: unset;
+  min-width: fit-content;
+  font-weight: bold;
+  color: gray;
+  border-color: #D3D3D4;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .statsTable {
